<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="40sp">


    <data>

        <variable
            name="customDialogCalendarViewModel"
            type="it.sapienza.macc.sharet.customdialogcalendar.CustomDialogCalendarViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        tools:context=".customdialogcalendar.CustomDialogCalendarFragment">


        <TextView
            android:id="@+id/reservation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/roboto"
            android:text="@string/reservation_title"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/create_event_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/roboto"
            android:text="@string/event_name"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/name_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="120dp"
                android:fontFamily="@font/roboto"
                android:text="@string/start_time"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/end_time"
                android:textSize="16sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/selected_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="135dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/time_hint"
                android:inputType="none"
                android:focusable="false"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/selected_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/time_hint"
                android:inputType="none"
                android:focusable="false"
                android:textSize="16sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/negative_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/close"
                android:textColor="#0094DE"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/positive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/create"
                android:textColor="#0094DE"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</layout>