<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="customDialogResourceViewModel"
            type="it.sapienza.macc.sharet.customdialogresource.CustomDialogResourceViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_corner"
        tools:context=".customdialogresource.CustomDialogResourceFragment">

    <TextView
        android:id="@+id/create_resource_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/create_resource"
        android:textAlignment="center"
        android:textSize="20sp" />

        <EditText
            android:id="@+id/name_resource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/submit_create_resource_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</layout>