<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="sharedResourceViewModel"
            type="it.sapienza.macc.sharet.sharedresource.SharedResourceViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sharedResourceConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sharedresource.SharedResourceFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintHeight_percent="0.1"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="119dp"
            android:layout_height="47dp"
            android:layout_marginTop="12dp"
            android:text="@string/logout_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_resource_button"
            android:layout_width="314dp"
            android:layout_height="57dp"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> sharedResourceViewModel.onAddResourceButton()}"
            android:text="@string/add_shared_resource_text"
            app:icon="@android:drawable/ic_input_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout_button" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="119dp"
            android:layout_height="47dp"
            android:layout_marginTop="12dp"
            android:text="@string/clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_resource_button"
            android:onClick="@{() -> sharedResourceViewModel.onClear()}" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSharedResource"
            android:layout_width="409dp"
            android:layout_height="496dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_button" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>